--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,3 +1,5 @@
+cargo-features = ["profile-rustflags"]
+
 [package]
 name = "circ"
 version = "0.1.0"
@@ -55,6 +57,7 @@ ark-bls12-381 = { version = "0.3.0", optional = true }
 sha2 = { version = "0.9.0", optional = true }
 rand_chacha = { version = "0.3.1", optional = true }
 digest = { version = "0.9.0", optional = true }
+order-stat = "0.1.3"
 
 [dev-dependencies]
 quickcheck = "1"
@@ -99,3 +102,4 @@ required-features = ["lp"]
 
 [profile.release]
 debug = true
+rustflags = ["-C", "force-frame-pointers=y"]
