--- a/Cargo.toml
+++ b/Cargo.toml
@@ -58,6 +58,7 @@ sha2 = { version = "0.9.0", optional = true }
 rand_chacha = { version = "0.3.1", optional = true }
 digest = { version = "0.9.0", optional = true }
 order-stat = "0.1.3"
+floating-duration = "0.1.2"
 
 [dev-dependencies]
 quickcheck = "1"
